--- a/pages/p8/956943.md
+++ b/pages/p8/956943.md
@@ -1,4 +1,4 @@
-### 老祖宗10句话 道尽人生百态(图)
+### 曾国藩：永不说出口的“六句话”(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,21 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="老祖宗10句话，说尽人生百态。" src="https://img3.secretchina.com/pic/2020/8-21/p2759222a904277478-ss.jpg" style="height:337px; width:600px"/>
+  <img alt="曾国藩 厚道 口德 尊重" src="https://img3.secretchina.com/pic/2020/1-10/p2601252a830871254-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   老祖宗10句话，说尽人生百态。（图片来源：Adobe stock)
+   做人要
+   <strong>
+    厚道
+   </strong>
+   ，多积
+   <strong>
+    口德
+   </strong>
+   ，多
+   <strong>
+    尊重
+   </strong>
+   别人，既是包容别人，也是包容自己。（图片来源：Adobe stock)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,455 +33,42 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://141.164.51.119:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://141.164.51.119:10000/videos/blog/jiexi1400.html)
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
 
-#### [ 🎬  翻墙必看视频（八九六四、法轮功、709大抓捕、香港反送中 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
-
-#### 网站代理：[大纪元新闻网](http://167.172.10.89:10080/gb/) &nbsp;|&nbsp; [新唐人电视台](http://167.172.10.89:8808/gb/)  &nbsp;|&nbsp; [YouTube热门频道](http://158.247.203.241/youtube.html) &nbsp;|&nbsp; [网门免翻墙](http://158.247.203.241:11000/show.aspx?name=ogHome)
-
-#### 💥 [九评共产党](http://141.164.51.119:10000/videos/res/jiuping/)&nbsp; |&nbsp; [漫谈党文化](http://141.164.51.119:10000/videos/res/mtdwh/)&nbsp; |&nbsp; [共产主义的终极目的](http://141.164.51.119:10000/videos/res/zjmd/)&nbsp; |&nbsp; [魔鬼在統治著我們的世界](http://141.164.51.119:10000/videos/res/TheSpecter/)  
-
-#### [ 🔥  深度報導紀錄片《大疫襲來》- 2020年疫情大流行的背後，哪些真相被忽略、被掩蓋？](http://141.164.51.119:10000/videos/news/../corona/index.html)
-
-#### [ 🔥  《通往天安门的旅程》- 36名西方人天安门和平请愿](http://141.164.51.119:10000/videos/news/../legend/index.html)
-
-#### [ 🔥  《大裤衩》第一集 - 揭秘央视电视台《焦点追踪》节目组的幕后故事](http://141.164.51.119:10000/videos/news/../res/big-shorts/index.html)
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
   <strong>
-   【01】斗米养恩，担米养仇
+   <span href="https://www.secretchina.com/news/gb/tag/曾国藩" target="_blank">
+    曾国藩
+   </span>
   </strong>
+  被誉为“晚清中兴四大名臣”，受到后人很高的的评价。他的仕途颇为传奇，起初七次科举不中，十年七迁，连跳十级，官至二品。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  一个人饥寒交迫的时候，你给他一斗米，就是解决了他的大问题，他会感恩不尽。但是，你如果继续给他米，他就会觉得理所当然了。一斗米不够，二斗米不够，一担米还是觉得你只给了沧海一粟。
+  曾国藩的一生勤俭廉劳，不为官自傲。他修身律己，以德为官，在官场获得了巨大成功，官运一直很旺。常言道，官场如战场，旦夕祸福。曾国藩在官场上的成功，源自他说话时采用的方式方法。他奉行“戒多言”的原则。
  </p>
  <p>
-  生活里常有这样的事，第一次为一个人提供帮助时，他会对你心存感激，第二次他的感恩心理就会淡化，到了N次以后，他简直就理直气壮地认为这都是应该为他做的。
+  老人们常说，“病从口入，祸从口出。”有价值的话多说，没必要的话不说。
  </p>
  <p>
-  甚至当没有了这种帮助时，他会对施助者心存怨恨。
- </p>
- <p>
-  所以，人的
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/善良" target="_blank">
-    善良
-   </span>
-  </strong>
-  一定要有度。
- </p>
- <p>
-  当一个人不思进取，一味索取帮助时，请及时收起你的善良！
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   【02】般般皆会，件件不精
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  俗话说的好，贪多嚼不烂。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一个人的精力有限，要想在某一个行业获得成就，那就要持续地在这一行业里深耕下去，如果什么都要学，最终的结果，就是什么都学不好。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  现在都在提倡的工匠精神也是这个道理，在一件事上做到极致，那就是最优秀的工匠，也就能有最优秀的产品。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   【03】
-   <span href="https://www.secretchina.com/news/gb/tag/摆渡" target="_blank">
-    摆渡
-   </span>
-   摆到江边，造塔造到塔尖
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  做事情一定要坚持到最后，坚持就是胜利。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  俗话说，行百里者半九十，这个世界上的大部分人之所以失败，不是因为天赋不够，也不是因为运气不好，而是因为没有坚持到最后。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  有一个著名的定律叫
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/荷花定律" target="_blank">
-    荷花定律
-   </span>
-  </strong>
-  ，第一天开放的只是一小部分，第二天，它们会以前一天的两倍速度开放。到了第30天，就开满了整个池塘。你知道什么时候荷花开了一半么？
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  很多人都会认为是第十五天，然而并非如此！到第29天时荷花仅仅开满了一半，直到最后一天才会开满另一半。最后一天的速度最快，等于前29天的总和。而世界上绝大多数人，都停在了第29天。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  成功看似遥遥无期，其实，只是差迈出最后一步而已。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   【04】遍地是黄金，一分本事一分银
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  与其怨天尤人，不如快马加鞭。这个世界上处处都是机遇，关键是看你有没有本事。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  有一分的本事，就能吃一分的饭，上天是公平的。倘若有三分本事，却吃十分的饭，那一定是取巧钻营换来的，这样的人哪怕富足，心里也必然不踏实。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  遍地都是机会，没必要投机取巧。只要自己有本事，不怕出不了头。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  而且，也只有靠本事吃饭，才能做到凭良心做人。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   【05】不落海底不知大海深，不生子女不知父母恩
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不落到海底不会知道海有多深，没有生儿育女，也不会知道父母的不容易。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  事情得踏踏实实地落到自己身上的时候，才能真正意义上感同身受。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  所以，
-  <strong>
-   王阳明
-  </strong>
-  说“
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwjQt53G1K3rAhWQH3AKHXYdBjUQFjAAegQIBBAB&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E7%259F%25A5%25E8%25A1%258C%25E5%2590%2588%25E4%25B8%2580&amp;usg=AOvVaw0m-efm3Q-ttsOcKl7gnH9D">
-   知行合一
+  <span href="https://zh.wikipedia.org/wiki/%E6%9B%BE%E5%9B%BD%E8%97%A9">
+   曾国藩
   </span>
-  ”，真知都是在行动中得来的。
+  言：“行事不可任心，说话不可任口”。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  一个人没有为人父母，就永远不会知道父母在自己身上付出了多少，在历经养育子女的艰辛之后，才会明白自己的父母有多不容易，才能真正懂得感恩，懂得孝顺父母。
+  这源于一件小事：曾国藩父亲过生日，郑小珊前来祝寿，他是曾国藩的老乡，当时曾国藩刚入翰林院，得意忘形，拉着小珊夸夸其谈，口无遮拦，有的说没的也说，惹恼了郑小珊，于是郑小珊愤怒离去。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p>
-  <strong>
-   【06】不怕马王三只眼，就怕人怀两条心
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  三只眼的马王爷是很可怕，但是更可怕的是人心难测。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  堡垒都是在内部攻破的，对手再强，也抵不过众志成城，就怕有人心存两意，出卖朋友。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  人心隔肚皮，交朋友一定要慎之又慎。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  路遥知马力，日久见人心，历经岁月陪伴的友谊往往更值得信任。
+  事后曾国藩察觉到了自己的错误，懊悔不迭，此后他开始注意自己的言行。以下是曾国藩自己总结研究出来的为人处世的六句话。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -485,7 +84,7 @@
  </center>
  <p>
   <strong>
-   【07】慈不掌兵，义不掌财
+   【01】不说直话
   </strong>
  </p>
  <center>
@@ -501,7 +100,7 @@
   </div>
  </center>
  <p>
-  心太软的人不适合带兵打仗，讲义气的人不适合掌管财务。
+  说话是一门艺术。说的好是锦上添花，说的不好则是雪上加霜。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -516,7 +115,7 @@
   </div>
  </center>
  <p>
-  战场生死攸关，关键的时候，绝不能因为妇人之仁而误了大事。
+  说话切记不要直来直去。自尊心和虚荣心人人都有，倘若胡乱说话，不顾及他人的情况，极易造成尴尬场面，闹得大家不快。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -531,7 +130,7 @@
   </div>
  </center>
  <p>
-  所谓养兵千日，用兵一时，处此“一时”之时，统帅战将必要有钢铁一般的意志和决心以指挥行事，绝不能因心软而坏了大局。
+  曾国藩告诫儿子说：“自古以来讲凶德致败的道理大致有两条，一是长傲，二是多言。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -546,7 +145,41 @@
   </div>
  </center>
  <p>
-  世上忠义之士多好友，然好友则必然重友而轻财，所谓仗义疏财，所以义者不能守财，也守不住。因为他们根本不在乎财。
+  说话要像山间的泉水一样，沁人心脾，汩汩而流。不能跟大江大河一样，浩浩荡荡，奔腾而流。直截了当的说与轻声慢语的说，效果是不同的，后者更容易被人们接受。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  要让别人听进去你的话，这是与人交流的关键。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  倘若说话方式不对，话再真诚、再有价值，对方不入耳也是徒劳的。而委婉的、不生硬的话语既是
+  <span href="https://www.secretchina.com/news/gb/tag/尊重" target="_blank">
+   尊重
+  </span>
+  对方，留给对方一定余地，也是稳定对方的情绪，让对话延续下去。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -562,7 +195,7 @@
  </center>
  <p>
   <strong>
-   【08】打是亲，骂是爱，恼了性子拿脚踹
+   【02】不说闲话
   </strong>
  </p>
  <center>
@@ -578,7 +211,214 @@
   </div>
  </center>
  <p>
-  打是亲，是指关系很亲密的人才会跟你打闹，讲的是肢体上的玩笑。
+  说闲话的人容易被人讨厌，尤其是那种背后说人闲话的人。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  曾国藩在家书中写道：“常说是非事，必是是非人。”经常爱嚼舌根，一点小事就当大事宣传的人，必然不是什么好人。经常去说别人闲话，总有一天闲话会传入那人的耳朵里。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  真正的聪明人，在闲暇时间里，总会去学点东西或提升自己，不浪费自己的时间和精力。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   【03】不说怨话
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  在生活中我们总会遇到抱怨的人，他们抱怨自己或抱怨别人。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  其实抱怨是在做无用功，对解决问题没有一丁点好处。人们不愿意一直听你抱怨，反过来看，我们也不愿意老是听别人抱怨。抱怨听多了，心情会变糟糕，陷入负能量的漩涡。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  爱抱怨、发牢骚的人，意志不坚定，抗压能力特别差。遇到麻烦事老是抱怨，不断的去找别人的借口，抱怨世道不公，让自己遭遇凄惨。这样很容易让你成为懒惰者和脆弱者。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  因此，我们不要傻傻的再去抱怨了，不妨静静思考，我们为什么会失败？有没有解决问题的方法？下次再遇到能不能做得更好？这才是我们需要做的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   【04】不说狂话
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  与人交往，坦诚第一，狂傲的、自大的话，就不要说了，说了容易招人厌恶。也不要轻易承揽下自己办不到的事，到最后失信于人，丢失的是别人对你的信任。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  为了喂饱自己的虚荣心，说了狂话，把自己的缺点暴露给别人，这真是得不偿失。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  魏晋时期，两晋名士
+  <span href="https://zh.wikipedia.org/wiki/%E5%91%A8%E9%A1%97">
+   周伯仁
+  </span>
+  爱说狂话。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  《
+  <span href="https://zh.wikipedia.org/wiki/%E6%99%8B%E4%B9%A6">
+   晋书
+  </span>
+  》上说：有一回晋元帝宴请群臣，众人酒喝得很尽兴，晋元帝高兴地说：“在座的各位都是全国有名的大臣，我们今天共聚一堂，众位爱卿有没有觉得我像上古的尧舜禹呢？”众大臣鼓掌称是。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  周伯仁当时喝醉了，只见他大声说道：“都是皇帝，今天的皇帝怎么能比得上圣人在的时候呢？”皇帝非常生气，当即下圣旨，要处死周伯仁。多日后赦免了他。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -597,37 +437,7 @@
   </ins>
  </center>
  <p>
-  骂是爱，就是我们常说的，关系好才会说出你的不对和缺点，是正面的骂，是关爱，不是反面的辱骂。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  爱到深处拿脚踹，是指关系很深了，当看到对方不努力，不上进，不听劝时，怒其不争，就用比较激烈的方式，刺激和帮助对方。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  哪怕是用脚踹，但是心底是难过的，真心想帮助对方。
+  所以，我们要低调做人，不要像周伯仁一样太过狂妄，这样容易招来横祸。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -643,7 +453,7 @@
  </center>
  <p>
   <strong>
-   【09】待你父母十二两，儿孙还你一整斤
+   【05】不说胡话
   </strong>
  </p>
  <center>
@@ -659,7 +469,7 @@
   </div>
  </center>
  <p>
-  一个人如何对待自己的父母，将来孩子就会如何对待他自己。
+  人活在世，一定要活得明白，明明白白做人，明明白白做事。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -674,7 +484,7 @@
   </div>
  </center>
  <p>
-  我们说，一个家庭就是一棵大树，爷爷奶奶是大树的根，父母是枝叶，孩子是果实。
+  不胡言乱语，不知道的咱不说，千万不要胡说，胡话一旦出了口，就收不回来了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -689,7 +499,7 @@
   </div>
  </center>
  <p>
-  只有在根上施肥，枝叶才能繁盛，果子也才能有足够的营养。
+  老话常讲，“说者无心，听者有意。”别人听到耳朵里，就会怀疑你的人品，对你形象产生负面影响。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -704,22 +514,7 @@
   </div>
  </center>
  <p>
-  一个人在孝养父母之时，自己的儿女也看在眼里，父母以身作则孝敬尊长，就是孩子成长最好的榜样。孩子是通过父母的行动，懂得孝的。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  一个家庭里，如果父母孝顺老人，那么孩子就会孝顺父母，一家人就能和和美美。
+  满嘴胡话的人，没人愿意亲近他，因为句句都掺杂假话，有效沟通程度很低。说话清晰明确，不说胡话，让听者觉得你这个人靠得住，这便是高情商的表现。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -735,7 +530,7 @@
  </center>
  <p>
   <strong>
-   【10】灯常拨才亮，刀常磨才快
+   【06】不说恶话
   </strong>
  </p>
  <center>
@@ -751,25 +546,11 @@
   </div>
  </center>
  <p>
-  俗话说的好，一勤天下无难事；勤拨灯，灯就常亮；勤磨刀，刀就锋利。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <span href="https://www.google.com.tw/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiKkerS1K3rAhXNFogKHT64DKUQmhMwFHoECAsQAg&amp;url=https%3A%2F%2Fzh.wikipedia.org%2Fzh-tw%2F%25E6%259B%25BE%25E5%259B%25BD%25E8%2597%25A9&amp;usg=AOvVaw1n5rKeTxnFAgFWHqi8SKv3">
-   曾国藩
+  曾国藩常常在家书中告诫子女，做人要
+  <span href="https://www.secretchina.com/news/gb/tag/厚道" target="_blank">
+   厚道
   </span>
-  一直认为：
+  ，话不要说死，事不要做绝。多积口德，多尊重别人，这既是包容别人，也是包容自己。恶言恶语，尽量不要说，要学会克制。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -784,7 +565,10 @@
   </div>
  </center>
  <p>
-  不管是居家、居官、行军，都应该要以“勤”字为根本。
+  老话说得好，
+  <strong>
+   “良言一句三冬暖，恶语伤人六月寒。”
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -799,7 +583,7 @@
   </div>
  </center>
  <p>
-  天道酬勤，一个人不管他的资质如何，只要能勤奋、坚持不懈，才智自然就会一点一滴积累下来。
+  恶话的杀伤力不亚于一颗精神上的原子弹。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -814,71 +598,40 @@
   </div>
  </center>
  <p>
-  成就伟业者，不必有过人之聪慧，但必有过人之勤奋。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  古人说：“勤能补拙是良训，一分辛苦一分才。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  没有人能依靠天赋成功，只有勤奋才能将天赋变为天才。伟大的成功和辛勤的劳动是成正比的，有一分劳动就有一分收获。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
+  <span href="https://zh.wikipedia.org/wiki/%E9%98%AE%E7%8E%B2%E7%8E%89">
+   阮玲玉
   </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+  在遗书中写道：“我一死何足惜，不过还是怕人言可畏。”恶语给他人带来的伤害，是我们无法估量的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  所以，我们在说话之前，一定要在脑子里过滤一遍，淘汰掉伤人的恶话。想想你说出口的话有没有上面那六种。想想你说出口话是否照顾到了对方，想想你说出口的话是否合乎场合。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  谨记：你说出口的每一句话，都将决定你人生的高度。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -891,6 +644,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:wendy
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb40wZ"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -908,13 +695,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943646.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943646.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/943646.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/08/22/943646.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956943.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956943.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/956943.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/26/956943.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/943646.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/956943.md' width='0px' height='0px'/>
